--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "antd": "^5.22.2",
+    "antd-zod": "^6.0.0",
     "axios": "^1.7.7",
     "concurrently": "^9.1.0",
     "react": "^18.3.1",
@@ -19,7 +20,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -33,7 +35,6 @@
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
     "sass": "^1.81.0",
-    "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
