--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "vite-plugin-pwa": "^0.21.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
